# schemer

./: .gitignore  CMakeLists.txt  README.md  README.rst
cmake_modules/: FindLLVM.cmake  Utils.cmake
docs/: Makefile  builtins.rst  concepts.rst  conf.py  expressions.rst  index.rst  lexicons.rst  programs.rst
docs/templates/: README
src/: CMakeLists.txt  ast.h  config.h.in  scanner-test.cc  scanner.h  schemer-test.cc  schemer.cc  schemer.l  schemer.y  type.h
src/cmake_modules/: FindLLVM.cmake  StringUtils.cmake
